--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,4 +6,9 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
+    <!-- <style name="DatePickerTheme" parent="DatePickerBaseTheme"> -->
+        <!-- <item name="android:colorAccent">#F58F00</item> -->
+        <!-- <item name="android:colorControlNormal">#F58F00</item> -->
+    <!-- </style> -->
+
 </resources>
